Closed Bug 1336487 Opened 8 years ago Closed 8 years ago

export CERT_CompareAVA

Categories

(NSS :: Libraries, defect)

3.28
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: pwouters, Unassigned)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Fedora; Linux x86_64; rv:50.0) Gecko/20100101 Firefox/50.0 Build ID: 20170116135521 Steps to reproduce: CERT_CompareAVA() appears in header file but is not exported in the library Actual results: libreswan has to include a copy of the nss code that is not exported to the library
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: CERT_CompareAVA() appears in header file but is not exported in the library → export CERT_CompareAVA
Attached patch 1336487-v1.patchSplinter Review
Attachment #8840074 - Flags: review?(rrelyea)
QA Contact: kaie
Target Milestone: --- → 3.30
Comment on attachment 8840074 [details] [diff] [review] 1336487-v1.patch Review of attachment 8840074 [details] [diff] [review]: ----------------------------------------------------------------- r+ rrelyea
Attachment #8840074 - Flags: review?(rrelyea) → review+
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: