building: Prepare for NSS fix for CompareAVA() export

This introduced NSS_REQ_AVA_COPY?=true to mk/config.mk

The copied code is renamed to its actual name so all other
code can be fully identical to whether or not the workaround
is enabled.

See also: https://bugzilla.mozilla.org/show_bug.cgi?id=1336487